0.71 2017-03-03
- First official CPAN release of OpenGL::GLUT